Changing links to renumbered notebooks in slides

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -152,7 +152,7 @@ When you run these notebooks, they will generate a draft of model documentation 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
 
-You will need to have already completed **101** and **102** during the first and second modules to proceed.
+You will need to have already completed notebooks **1** and **2** during the first and second modules to proceed.
 
 :::
 
@@ -164,13 +164,13 @@ You will need to have already completed **101** and **102** during the first and
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
-1. [101 Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/101-set_up_validmind.ipynb){target="_blank"}
-2. [102 Start the model development process](/notebooks/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
-3. [103 Integrate custom tests](/notebooks/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
-4. [104 Finalize testing and documentation](/notebooks/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1 — [Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}<br>
+2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
+3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
+4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this third module, we'll run through the remaining two notebooks **103** in [section 1]{.smallcaps} and **104** in [section 2]{.smallcaps} together.
+In this third module, we'll run through the remaining two notebooks **3** in [section 1]{.smallcaps} and **4** in [section 2]{.smallcaps} together.
 :::
 
 :::
@@ -180,10 +180,10 @@ Let's continue our journey with **[section 1]{.smallcaps}** on the next page. {{
 
 # [section 1]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**103 Integrate custom tests**
+**3 — Integrate custom tests**
 
 ::: {.f5}
 This is the third notebook in our introductory series, which will walk you through how to implement different types of custom tests with {{< var vm.product >}}.
@@ -241,7 +241,7 @@ Make sure you're logged in and have refreshed the module.
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Connect to your model**
@@ -249,7 +249,7 @@ Make sure you're logged in and have refreshed the module.
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Open **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -279,7 +279,7 @@ Let's implement a custom *inline test* that calculates the confusion matrix for 
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#create-a-confusion-matrix-plot" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-a-confusion-matrix-plot" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Create a custom test**
@@ -287,7 +287,7 @@ Let's implement a custom *inline test* that calculates the confusion matrix for 
 ::: {.f5}
 The [`@vm.test` wrapper](/validmind/validmind.qmd#test){target="_blank"} allows you to create a reusable test:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells in the following section under Implementing a custom inline test: **Create a confusion matrix plot**
 
 :::
@@ -296,7 +296,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Adjust your custom test**
@@ -304,7 +304,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Custom tests can take parameters just like any other function:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells in the following sections under Implementing a custom inline test: <br>**Add parameters to custom tests** / **Pass parameters to custom tests**
 
 :::
@@ -313,7 +313,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#log-the-confusion-matrix-results" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#log-the-confusion-matrix-results" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Log your custom test**
@@ -321,7 +321,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Use the [`.log()` method](/validmind/validmind/vm_models.qmd#log){target="_blank"} to send the results of your custom test to the {{< var validmind.platform >}}:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell in the following section under Implementing a custom inline test: **Log the confusion matrix results**
 
 :::
@@ -354,7 +354,7 @@ Creating inline custom tests with a function is a great way to customize your mo
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#create-custom-tests-folder" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-custom-tests-folder" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Create custom tests folder**
@@ -362,7 +362,7 @@ Creating inline custom tests with a function is a great way to customize your mo
 ::: {.f5}
 Create a new folder that will contain reusable custom tests from your existing inline tests:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run the cell under the following Using external test providers section: **Create custom tests folder**
 
 :::
@@ -371,7 +371,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#save-an-inline-test" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#save-an-inline-test" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Save inline test**
@@ -379,7 +379,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 The `@vm.test` decorator also includes a convenience method that allows you to save the test to a Python file at a specified path:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Save an inline test**
 
 :::
@@ -388,7 +388,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/103-integrate_custom_tests.html#register-a-local-test-provider" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#register-a-local-test-provider" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Register local test provider**
@@ -396,7 +396,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Next, let's initialize a test provider that will tell the {{< var validmind.developer >}} where to find your saved custom tests:
 
-1. Continue with **103 Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
+1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
 2. Run all the cells under the Using external test providers section: **Register a local test provider**
 
 :::
@@ -416,7 +416,7 @@ Custom test results
 :::
 
 ::: {.tc}
-[Learn more ...](/notebooks/EXECUTED/model_development/103-integrate_custom_tests.ipynb#add-test-results-to-documentation){.button target="_blank"}
+[Learn more ...](/notebooks/EXECUTED/model_development/3-integrate_custom_tests.ipynb#add-test-results-to-documentation){.button target="_blank"}
 
 :::
 
