--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -120,7 +120,7 @@ When you run these notebooks, they will generate a draft of model documentation 
 
 ::: {.f5 .nt2 .pl2 .mb4}
 <br>
-You will need to have already completed **101 Set up the {{< var validmind.developer >}}** during the first module to proceed.
+You will need to have already completed **1 — Set up the {{< var validmind.developer >}}** during the first module to proceed.
 :::
 
 :::
@@ -131,24 +131,24 @@ You will need to have already completed **101 Set up the {{< var validmind.devel
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
-1. [101 Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/101-set_up_validmind.ipynb){target="_blank"}
-2. [102 Start the model development process](/notebooks/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
-3. [103 Integrate custom tests](/notebooks/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
-4. [104 Finalize testing and documentation](/notebooks/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1 — [Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}<br>
+2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
+3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
+4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this second module, we'll run through **102 Start the model development process** together. 
+In this second module, we'll run through **2 — Start the model development process** together. 
 :::
 
 :::
 ::::
 
-Let's continue our journey with **102 Start the model development process** on the next page. {{< fa hand-point-right >}}
+Let's continue our journey with **2 — Start the model development process** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html" background-interactive="yes" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**102 Start the model development process**
+**2 — Start the model development process**
 
 ::: {.f5}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
@@ -229,7 +229,7 @@ Make sure you're logged in and have refreshed the module.
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#initialize-the-validmind-library" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Connect to your model**
@@ -237,7 +237,7 @@ Make sure you're logged in and have refreshed the module.
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cells in the Setting up section: <br>**Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
 
 :::
@@ -247,15 +247,15 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::::
 
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#identify-qualitative-tests" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#identify-qualitative-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Identify qualitative tests**
 
 ::: {.f5}
-Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_development/101-set_up_validmind.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
+Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Setting up section: **Identify qualitative tests**
 
 :::
@@ -264,7 +264,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::::
 
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#initialize-the-validmind-datasets" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-the-validmind-datasets" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Initialize {{< var vm.product >}} datasets**
@@ -272,7 +272,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Setting up section: **Initialize the {{< var vm.product >}} datasets**
 
 :::
@@ -286,7 +286,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Run ValidMind tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#run-tabular-data-tests" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-tabular-data-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Run tabular data tests**
@@ -294,7 +294,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 You run individual tests by calling the [`run_test` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Running tests section: **Run tabular data tests**.
 
 :::
@@ -303,7 +303,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#utilize-test-output" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#utilize-test-output" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Utilize test output**
@@ -311,7 +311,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Running tests section: **Utilize test output**.
 
 :::
@@ -348,7 +348,7 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#run-and-log-multiple-tests" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-multiple-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Run & log multiple tests**
@@ -356,7 +356,7 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 ::: {.f5}
 The [`run_documentation_tests()` function](/validmind/validmind.qmd#run_documentation_tests){target="_blank"} allows you to run multiple tests at once and automatically log the results to your documentation:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Documenting results section: **Run and log multiple tests**.
 :::
 
@@ -364,7 +364,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#run-and-log-an-individual-test" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-an-individual-test" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Run & log an individual test**
@@ -372,7 +372,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the following cell in the Running tests section: **Run and log an individual test**.
 
 :::
@@ -388,7 +388,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Work with test results
 
 ::: {.tc}
-[Learn more ...](/notebooks/EXECUTED/model_development/102-start_development_process.ipynb#add-individual-test-results-to-model-documentation){.button target="_blank"}
+[Learn more ...](/notebooks/EXECUTED/model_development/2-start_development_process.ipynb#add-individual-test-results-to-model-documentation){.button target="_blank"}
 
 :::
 
@@ -473,7 +473,7 @@ In this next example, we’ll focus on running the tests within the Model Develo
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Train your model**
@@ -481,7 +481,7 @@ In this next example, we’ll focus on running the tests within the Model Develo
 ::: {.f5}
 Using {{< var vm.product >}} tests, we'll train a simple logistic regression model on our dataset and evaluate its performance:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run all the cells under the Model testing section: **Train simple logistic regression model**.
 :::
 
@@ -489,7 +489,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#initialize-model-evaluation-objects" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-model-evaluation-objects" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Initialize a model object**
@@ -497,7 +497,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Use the `init_dataset` and [`init_model` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Initialize model evaluation objects**.
 
 :::
@@ -506,7 +506,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#assign-predictions" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#assign-predictions" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Assign predictions**
@@ -514,7 +514,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Assign predictions**.
 
 :::
@@ -523,7 +523,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/102-start_development_process.html#run-the-model-evaluation-tests" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-the-model-evaluation-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Run the model evaluation tests**
@@ -531,7 +531,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Finally, we'll run only the tests within the Model Development section of the model documentation:
 
-1. Continue with **102 Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
 2. Run the cell under the following Model testing section: **Run the model evaluation tests**.
 
 :::
