--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -123,13 +123,13 @@ When you run these notebooks, they will generate a draft of model documentation 
 
 Our series of four introductory notebooks for model developers include sample code and how-to information to get you started with {{< var vm.product >}}:
 
-1. [101 Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/101-set_up_validmind.ipynb){target="_blank"}
-2. [102 Start the model development process](/notebooks/tutorials/model_development/102-start_development_process.ipynb){target="_blank"}
-3. [103 Integrate custom tests](/notebooks/tutorials/model_development/103-integrate_custom_tests.ipynb){target="_blank"}
-4. [104 Finalize testing and documentation](/notebooks/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1 — [Set up the {{< var validmind.developer >}}](/notebooks/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}<br>
+2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
+3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
+4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this first module, we'll run through **101 Set up the {{< var validmind.developer >}}** together.
+In this first module, we'll run through **1 — Set up the {{< var validmind.developer >}}** together.
 :::
 
 :::
@@ -137,12 +137,12 @@ In this first module, we'll run through **101 Set up the {{< var validmind.devel
 
 <br>
 
-Let's start our journey with **101 Set up the {{< var validmind.developer >}}** on the next page. {{< fa hand-point-right >}}
+Let's start our journey with **1 — Set up the {{< var validmind.developer >}}** on the next page. {{< fa hand-point-right >}}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/101-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**101 Set up the {{< var validmind.developer >}}**
+**1 — Set up the {{< var validmind.developer >}}**
 
 ::: {.f5}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
@@ -280,7 +280,7 @@ Make sure you're logged in and have refreshed the page.
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/101-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Install & initialize the {{< var validmind.developer >}}**
@@ -288,7 +288,7 @@ Make sure you're logged in and have refreshed the page.
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **101 Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/101-set_up_validmind.ipynb){target="_blank"}
+1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2. Run all the cells in the sections under **Initializing the {{< var validmind.developer >}}**.
 
 :::
@@ -302,7 +302,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Preview model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/101-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Preview the documentation template**
@@ -310,7 +310,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 You can preview your model's documentation template right from the {{< var validmind.developer >}}:
 
-1. Continue with **101 Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/101-set_up_validmind.ipynb){target="_blank"}
+1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
 2.  Run all the cells in the sections under **Getting to know ValidMind**.
 
 :::
